<resources>
    <string name="please_scan_your_fingerprint_or">Please scan your fingerprint or your face to proceed.</string>
    <string name="cancel">Cancel</string>
    <string name="share_via">Share via</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="account_name">Account Name</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="key">Key</string>
    <string name="pen">Pen</string>
    <string name="eye">Eye</string>
    <string name="face_id">Face ID</string>
    <string name="check">Check</string>
    <string name="shield">Shield</string>
    <string name="account_verified">Account Verified</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="contacts">Contacts</string>
    <string name="send">Send</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fee">Fee</string>
    <string name="amount">Amount</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="add_contact">Add contact</string>
    <string name="contact_name">Contact name</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="view_passphrase">View root wallet passphrase</string>
    <string name="remove_account">Remove Account</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="remove">Remove</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="node_settings">Node Settings</string>
    <string name="enable_face_id_touch_id">Enable Face ID / Touch ID</string>
    <string name="an_error_occured">An Error Occurred</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="this_account_already_exists">This account already exists.</string>
    <string name="account">Account</string>
    <string name="delete_contact">Delete contact</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this contact?</string>
    <string name="too_many_accounts">Too Many Accounts!</string>
    <string name="looks_like_already_have_accounts">Looks like you already have %1$d or more accounts in your wallet. To keep the app performance snappy, we currently don\'t support more than %1$d accounts. To add another one, please remove an existing account first.</string>
    <string name="pending">Pending</string>
    <string name="you_should_enter_your_correct_password">You should enter your correct password to display your passphrase</string>
    <string name="there_s_no_biometric_registration">There\'s no biometric registration or biometric hardware found on the device</string>
    <string name="you_re_trying_to_send">You\'re trying to send transaction to account whose balance is lesser than minimum balance. The amount must be at least <annotation replacement="amount">amountPlaceholder</annotation> algo.</string>
    <string name="transaction_amount">Transaction amount results in a balance below the minimum account balance of <annotation replacement="min_balance">minBalancePlaceHolder</annotation> algo.</string>
    <string name="transaction_amount_cannot">Transaction amount cannot be more than your available amount.</string>
    <string name="transaction_amount_results">Transaction amount results in a negative balance.</string>
    <string name="note">Note</string>
    <string name="rewards">Rewards</string>
    <string name="show_rewards">Show Rewards</string>
    <string name="max">Max</string>
    <string name="max_all_caps">MAX</string>
    <string name="you_earn_rewards_just">You earn rewards just by owning Algo! Here\'s a summary of your rewards activity since your last transaction. These rewards are always included in your balance.</string>
    <string name="for_more_information">For more information on Algorand\nRewards, visit our <annotation custom="faq_color"><annotation type="bold">FAQ</annotation></annotation></string>
    <string name="reward">Reward</string>
    <string name="notifications">Notifications</string>
    <string name="the_internet_connection">The internet connection appears to be offline.</string>
    <string name="status">Status</string>
    <string name="in_order_to_delete">In order to delete an account, you must empty any asset account balance and destroy any asset you\'ve created, if any.</string>
    <string name="remove_assets">Remove Assets</string>
    <string name="asset">Asset</string>
    <plurals name="assets">
        <item quantity="one">Asset</item>
        <item quantity="other">Assets</item>
    </plurals>
    <string name="send_format">Send %1$s</string>
    <string name="add_asset_fee">Add Asset Fee</string>
    <string name="unnamed">Unnamed</string>
    <string name="entered_address_is_not_valid">Entered address is not valid.</string>
    <string name="search_assets_id">Search Assets ID or Name</string>
    <string name="no_asset_found">No Asset Found</string>
    <string name="you_already_have">You already own this asset.</string>
    <string name="adding_asset">Adding Asset</string>
    <string name="removing_asset">Removing Asset</string>
    <string name="unfortunately_this_account">Unfortunately, this account is not opted-in to %1$s asset. Please instruct the account %1$s to opt-in to the asset and then try again.</string>
    <string name="transfer_balance">Transfer balance</string>
    <string name="approve">Approve</string>
    <string name="account_does_not_accept">Account does not accept this asset</string>
    <string name="min_transaction_error">Min Transaction Error!</string>
    <string name="you_need_at_least">You need at least %1$s Algo to opt-in to this asset</string>
    <string name="please_add_this">Please add this asset and try again.</string>
    <string name="key_not_valid">Key not valid, please make sure you have the right key.</string>
    <string name="scanned_qr_is_not_valid">Scanned QR is not valid.</string>
    <string name="connect">Connect</string>
    <string name="error_default_title">Error</string>
    <string name="make_sure_your_ledger">Make sure that your ledger device is on and has Bluetooth enabled.</string>
    <string name="open_the_algorand_app">Open the Algorand app on your Ledger. </string>
    <string name="make_sure_bluetooth">Make sure Bluetooth is enabled on your smartphone.</string>
    <string name="bluetooth_is_enabled">Bluetooth is enabled.</string>
    <string name="all">All</string>
    <string name="verified_assets">Verified Assets</string>
    <string name="what_does_asset">What does Asset Verification mean? <annotation type="verified-icon"> </annotation> </string>
    <string name="verified_assets_first_paragraph">Assets that go through our verification process are known projects that have their website and public information verified against this specific ASA. Verification status is not an endorsement of the asset.</string>
    <string name="verified_assets_second_paragraph">Pera Wallet does not have any relationship with verified ASA owners. This badge is for informational purposes only.</string>
    <string name="verified_assets_third_paragraph">That being said, you should <annotation type="color">always double check</annotation> that the asset\'s ID is the one that you intended to choose before transacting with that asset.</string>
    <string name="verified_assets_fourth_paragraph">If you have questions about the verification process or general feedback about the app, we encourage you to visit;</string>
    <string name="advanced_troubleshooting">Advanced Troubleshooting</string>
    <string name="connecting_to_ledger">Connecting to Ledger…</string>
    <string name="ledger_approval">Ledger Approval</string>
    <string name="ledger_info_power_first_paragraph">
    <annotation url="https://support.ledger.com/hc/en-us/articles/360019138694-Set-up-Bluetooth-connection">For general usage of your Ledger\'s Bluetooth feature, please refer to Ledger\'s official <annotation type="bold"><annotation type="color">Bluetooth Connection Guide.</annotation></annotation></annotation>
  </string>
    <string name="ledger_info_power_second_paragraph">
    <annotation url="https://support.ledger.com/hc/en-us/articles/360025864773">For more advanced troubleshooting, please refer to Ledger\'s official <annotation type="bold"><annotation type="color">Bluetooth Troubleshooting Guide.</annotation></annotation></annotation>
  </string>
    <string name="ledger_info_ledger_first_paragraph">
    <annotation url="https://www.ledger.com/start">Begin by following Ledger\'s comprehensive <annotation type="bold"><annotation type="color">Getting Started</annotation></annotation> tutorial.</annotation>
  </string>
    <string name="ledger_info_ledger_second_paragraph">When the tutorial gets to the point where it directs you to \"select the application(s) you want to install on your device,\" type Algorand in the search bar and install.</string>
    <string name="ledger_info_algorand_first_paragraph"><annotation url="https://www.ledger.com/start">Continue with Ledger\'s <annotation type="bold"><annotation type="color">Getting Started</annotation></annotation> tutorial, which will direct you how to install and open apps on your ledger device.</annotation></string>
    <string name="ledger_info_algorand_second_paragraph">If you haven\'t already installed the <annotation type="bold">Algorand</annotation> app on your Ledger device, when the tutorial gets to the point where it directs you to \"Select the application(s) you want to install on your device,\" type Algorand in the search bar and install.</string>
    <string name="error_connection_title">Connection Error</string>
    <string name="done">Done</string>
    <string name="continue_text">Continue</string>
    <string name="your_transaction_is_processed_algorand">Your transaction is being processed by the Algorand network</string>
    <string name="view_transaction_detail_in_pera_explorer">View Transaction detail in Pera Explorer</string>
    <string name="sending_the_transaction">Sending the transaction</string>
    <string name="you_cant_send_this_asset">You can\'t send this asset directly because receiver not opted-in. But you can send it to its inbox address instead. <annotation custom="read_more_click">Read more</annotation></string>
    <string name="the_fee_above_will_be">The fee above will be used to cover transaction fees and the receiver\'s minimum balance requirements. If the receiver rejects the asset, you will not receive anything back.</string>
    <string name="protocol_and_min_balance_fees">Protocol &amp; minimum balance fees:</string>
    <string name="send_to_receiver">Send to Receiver</string>
    <string name="express_send">Express Send</string>
    <string name="your_receiving_wallet">Your Receiving Wallet is  not opted in. It needs to opt-in to receive the asset.\n\nPera simplifies this process by combining multiple transactions for a seamless experience.</string>
    <string name="how_this_asset_transfer">How this asset transfer works?</string>
    <string name="your_sending_account_will_send">Your Sending Account will send over the fees needed to opt into the asset</string>
    <string name="your_receiving_account_will_be">Your Receiving Account will be opted into the asset</string>
    <string name="your_sending_account_over">Your Sending Account will send over the asset</string>
    <string name="do_not_show_this_again">Don\'t show this again</string>
</resources>