<?xml version="1.0" encoding="utf-8"?><!--
  ~   ~ Copyright 2022 Pera Wallet, LDA
  ~   ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~   ~ you may not use this file except in compliance with the License.
  ~   ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~   ~ Unless required by applicable law or agreed to in writing, software
  ~   ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   ~ See the License for the specific language governing permissions and
  ~   ~ limitations under the License
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_xxxlarge">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/layer_gray_lightest"
            app:layout_constraintBottom_toBottomOf="@id/descriptionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconImageView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:src="@drawable/ic_express_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/express_send"
            android:textAppearance="@style/TextAppearance.Body.Large.Sans.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconImageView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:lineSpacingExtra="6dp"
            android:paddingBottom="@dimen/spacing_xxxlarge"
            android:text="@string/your_receiving_wallet"
            android:textColor="@color/text_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText" />

        <TextView
            android:id="@+id/howItWorksTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:text="@string/how_this_asset_transfer"
            android:textAppearance="@style/TextAppearance.Body.Sans.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        <TextView
            android:id="@+id/step1IndexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/first"
            android:textColor="@color/text_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/howItWorksTextView" />

        <TextView
            android:id="@+id/step1TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:lineSpacingExtra="4dp"
            android:text="@string/your_sending_account_will_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/step1IndexTextView"
            app:layout_constraintTop_toTopOf="@id/step1IndexTextView" />

        <TextView
            android:id="@+id/step2IndexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/second"
            android:textColor="@color/text_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step1TextView" />

        <TextView
            android:id="@+id/step2TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:lineSpacingExtra="4dp"
            android:text="@string/your_receiving_account_will_be"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/step2IndexTextView"
            app:layout_constraintTop_toTopOf="@id/step2IndexTextView" />

        <TextView
            android:id="@+id/step3IndexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/third"
            android:textColor="@color/text_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step2TextView" />

        <TextView
            android:id="@+id/step3TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:lineSpacingExtra="4dp"
            android:text="@string/your_sending_account_over"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/step3IndexTextView"
            app:layout_constraintTop_toTopOf="@id/step3IndexTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:text="@string/continue_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step3TextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doNotShowAgainButton"
            style="@style/Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/do_not_show_this_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/continueButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>