<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Pera Wallet, LDA
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.send.confirmation.ui.TransactionConfirmationFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/transactionStatusLottieView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/transactionTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        tools:background="@drawable/bg_layer_gray_lighter_oval"
        tools:backgroundTint="@color/positive" />

    <TextView
        android:id="@+id/transactionTitleTextView"
        style="@style/TextAppearance.Body.Large.Sans.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/sending_the_transaction"
        app:layout_constraintBottom_toTopOf="@id/transactionInfoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionStatusLottieView" />

    <TextView
        android:id="@+id/transactionInfoTextView"
        style="@style/TextAppearance.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center"
        android:text="@string/your_transaction_is_processed_algorand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionTitleTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openPeraExplorerButton"
        style="@style/Button.Text.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/view_transaction_detail_in_pera_explorer"
        app:layout_constraintBottom_toTopOf="@id/doneButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneButton"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
